--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
